--- a/recipes/stroganoff.html
+++ b/recipes/stroganoff.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h1>Ground Beef Stroganoff Noodles</h1>
-    
+    <img src="../images/stroganoff.jpg" width="300">
+    <h3>Description</h3>
+    <p>These ground beef stroganoff noodles are a shortcut version of classic beef stroganoff in a one-pan version. The ultimate comfort food with flavorful ground beef, mushrooms, and egg noodles. </p>
+
+
 </body>
 </html>
