--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/stroganoff.html">Ground Beef Stroganoff</a>
+
+    <ul>
+        <li>    <a href="recipes/stroganoff.html">Ground Beef Stroganoff</a>
+        </li>
+
+    </ul>
 
     
 </body>
