--- a/recipes/stroganoff.html
+++ b/recipes/stroganoff.html
@@ -5,11 +5,29 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="../index.html">Home</a>
+
     <h1>Ground Beef Stroganoff Noodles</h1>
-    <img src="../images/stroganoff.jpg" width="300">
+    <img src="../images/stroganoff.jpg" width="400">
     <h3>Description</h3>
     <p>These ground beef stroganoff noodles are a shortcut version of classic beef stroganoff in a one-pan version. The ultimate comfort food with flavorful ground beef, mushrooms, and egg noodles. </p>
-
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 tablespoon unsalted butter</li>
+        <li>1 tablespoon vegetable oil</li>
+        <li>1 pound ground beef</li>
+        <li>freshly ground black pepper</li>
+        <li>1 pinch cayenne pepper</li>
+        <li>2 cloves minced garlic</li>
+        <li>1 cup water</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Melt butter and oil in a skillet over medium-high heat. Add mushrooms, season with salt, and saute, stirring occasionally, until they turn golden brown, 5 to 10 minutes. </li>
+        <li>Stir in minced garlic and flour, and cook for 1 minute. Pour in vodka and allow to evaporate, about 30 seconds.</li>
+        <li>Reduce heat to medium, and mix in noodles. Cover with a tight-fitting lid and simmer for 5 minutes. Uncover and stir thoroughly. </li>
+        <li>Once noodles are cooked, reduce heat to low, and stir in sour cream. Serve immediately with additional sour cream and green onions or chives if so desired.</li>
+    </ol>
 
 </body>
 </html>
