Add katsu curry page

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <h1>Odin Recipes</h1>
 
     <ul>
-        <li>    <a href="recipes/stroganoff.html">Ground Beef Stroganoff</a>
-        </li>
-
+        <li>    <a href="recipes/stroganoff.html">Ground Beef Stroganoff</a> </li>
+        <li> <a href="recipes/katsu-curry.html">Katsu Curry</a></li>
     </ul>
 
     
