Added css to home page

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipees</title>
+    <link rel = "stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="title">Odin Recipes</h1>
 
-    <ul>
-        <li>    <a href="recipes/stroganoff.html">Ground Beef Stroganoff</a> </li>
-        <li> <a href="recipes/katsu-curry.html">Katsu Curry</a></li>
-    </ul>
+    
+    <img class = "icon" src="images/stroganoff.jpg">  
+    <a class = "link" href="recipes/stroganoff.html">Ground Beef Stroganoff</a> 
+    <img class = "icon" src="images/katsu-curry.jpg">  
+     <a class = "link" href="recipes/katsu-curry.html">Katsu Curry</a>
 
     
 </body>
