Add styling to recipes

--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
 <body>
     <h1 class="title">Odin Recipes</h1>
 
+    <div>
+        <img class = "icon" src="images/stroganoff.jpg">  
+        <a class = "link" href="recipes/stroganoff.html">Ground Beef Stroganoff</a> 
+    </div>
+   
+    <div>
+        <img class = "icon" src="images/katsu-curry.jpg">  
+        <a class = "link" href="recipes/katsu-curry.html">Katsu Curry</a>
+    </div>
     
-    <img class = "icon" src="images/stroganoff.jpg">  
-    <a class = "link" href="recipes/stroganoff.html">Ground Beef Stroganoff</a> 
-    <img class = "icon" src="images/katsu-curry.jpg">  
-     <a class = "link" href="recipes/katsu-curry.html">Katsu Curry</a>
+
+
 
     
 </body>
