--- a/recipes/katsu-curry.html
+++ b/recipes/katsu-curry.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Katsu Curry</title>
+    <link rel = "stylesheet" href="../styles.css">
+
 </head>
 <body>
-    <a href="../index.html">Home</a>
+    <a class="link" href="../index.html">Home</a>
 
-    <h1>Katsu Curry</h1>
+    <h1 class="title">Katsu Curry</h1>
     <img src="../images/katsu-curry.jpg" width="400">
-    <h3>Description</h3>
+    <h3 class="title heading">Description</h3>
     <p>Katsu Curry is simply a rice and curry with a cutlet on it. Since the cutlet is a meat dish on its own, my curry does not have any meat in it. I added three vegetables in the curry that are commonly used to make a Japanese Curry.</p>
-    <h3>Ingredients</h3>
+    <h3 class="title heading">Ingredients</h3>
     <ul>
         <li>House Vermont Curry</li>
         <li>Cooked rice</li>
@@ -21,7 +23,7 @@
         <li>Chicken Cutlet</li>
         <li>Funkujinzuke</li>
     </ul>
-    <h3>Steps</h3>
+    <h3 class="title heading">Steps</h3>
     <ol>
         <li>Put oil into a pot and sauté onion pieces until the edges start browning</li>
         <li>Add potato and carrot pieces to the pot and stir</li>
