--- a/recipes/stroganoff.html
+++ b/recipes/stroganoff.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Ground Beef Stroganoff Noodles</title>
+    <link rel = "stylesheet" href="../styles.css">
+
 </head>
 <body>
-    <a href="../index.html">Home</a>
+    <a class="link" href="../index.html">Home</a>
 
-    <h1>Ground Beef Stroganoff Noodles</h1>
+    <h1 class="title">Ground Beef Stroganoff Noodles</h1>
     <img src="../images/stroganoff.jpg" width="400">
-    <h3>Description</h3>
+    <h3 class="title heading">Description</h3>
     <p>These ground beef stroganoff noodles are a shortcut version of classic beef stroganoff in a one-pan version. The ultimate comfort food with flavorful ground beef, mushrooms, and egg noodles. </p>
-    <h3>Ingredients</h3>
+    <h3 class="title heading">Ingredients</h3>
     <ul>
         <li>1 tablespoon unsalted butter</li>
         <li>1 tablespoon vegetable oil</li>
@@ -21,7 +23,7 @@
         <li>2 cloves minced garlic</li>
         <li>1 cup water</li>
     </ul>
-    <h3>Steps</h3>
+    <h3 class="title heading">Steps</h3>
     <ol>
         <li>Melt butter and oil in a skillet over medium-high heat. Add mushrooms, season with salt, and saute, stirring occasionally, until they turn golden brown, 5 to 10 minutes. </li>
         <li>Stir in minced garlic and flour, and cook for 1 minute. Pour in vodka and allow to evaporate, about 30 seconds.</li>
